--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,6 @@
  {
-"builds":	[{ "src": "app.py", "use": "@vercel/python" }],
+ "vercel":	2,
+  
+  "builds":	[{ "src": "app.py", "use": "@vercel/python" }],
 "routes":	[{ "src": "/(.*)", "dest": "app.py" }]
 }
