--- a/requirements.txt
+++ b/requirements.txt
@@ -17,9 +17,9 @@ pytz==2025.2
 requests==2.32.3
 setuptools==78.1.0
 six==1.17.0
-SQLite4==0.1.1       #  SQLite3  no existe más como librería con pip
+SQLite3-0611==0.0.1       #  SQLite , cuidado con la versión
 tzdata==2025.2
- #  gunicorn==23.0.0    # quitado, da error
+#  gunicorn==23.0.0      # quitado, da error
 urllib3==2.3.0
 vercel==0.2.1
 Werkzeug==3.1.3
