--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ setuptools==78.1.0
 six==1.17.0
 SQLite3-0611==0.0.1       #  SQLite , cuidado con la versión
 tzdata==2025.2
-#  gunicorn==23.0.0      # quitado, da error
+gunicorn==23.0.0      # quitado, da error
 urllib3==2.3.0
 vercel==0.2.1
 Werkzeug==3.1.3
