--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,20 @@
 ﻿blinker==1.9.0
-certifi==2025.1.31
-charset-normalizer==3.4.1
-click==8.1.8
+click==8.2.1
 colorama==0.4.6
 DateTime==5.5
-Flask==3.1.0
-idna==3.10
+et_xmlfile==2.0.0
+Flask==3.1.1
 itsdangerous==2.2.0
 Jinja2==3.1.6
 logging==0.4.9.6
 MarkupSafe==3.0.2
-numpy==2.2.4
-pandas==2.2.3
+numpy==2.2.6
+openpyxl==3.1.5
+pandas==2.3.0
 python-dateutil==2.9.0.post0
 pytz==2025.2
-requests==2.32.3
-setuptools==78.1.0
+setuptools==80.9.0
 six==1.17.0
-SQLite4==0.0.1       #  SQLite , cuidado con la versión
 tzdata==2025.2
-gunicorn==20.0.4      # quitado, da error
-urllib3==2.3.0
-vercel==0.2.1
 Werkzeug==3.1.3
 zope.interface==7.2
-
