--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,17 @@
-﻿blinker==1.9.0
+blinker==1.9.0
 click==8.2.1
 colorama==0.4.6
 DateTime==5.5
 et_xmlfile==2.0.0
 Flask==3.1.1
+gunicorn==23.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 logging==0.4.9.6
 MarkupSafe==3.0.2
 numpy==2.2.6
 openpyxl==3.1.5
+packaging==25.0
 pandas==2.3.0
 python-dateutil==2.9.0.post0
 pytz==2025.2
