--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,25 @@
- {
-"builds":	[{ "src": "app.py", "use": "@vercel/python" }],
-"routes":	[{ "src": "/(.*)", "dest": "app.py" }]
+{
+  "version": 2,
+  "builds": [
+    {
+      "src": "app.py",
+      "use": "@vercel/python",
+      "config": {
+        "maxLambdaSize": "30mb",
+        "runtime": "python3.12"
+      }
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "app.py"
+    }
+  ],
+  
+  "functions": {
+    "app.py": {
+      "includeFiles": "/likes.db"
+    }
+  }
 }
