--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,31 @@
+bitarray==2.9.2
 blinker==1.9.0
 click==8.2.1
 colorama==0.4.6
 DateTime==5.5
+decorator==5.2.1
+env==0.1.0
 et_xmlfile==2.0.0
 Flask==3.1.1
-gunicorn==23.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
-logging==0.4.9.6
+knot==0.4.0
+knot_floer_homology==1.2.2
 MarkupSafe==3.0.2
-numpy==2.3.0
+networkx==3.5
+numpy==2.2.6
 openpyxl==3.1.5
-packaging==25.0
 pandas==2.3.0
-python-dateutil==2.9.0.post0
+pillow==10.2.0
+pycryptodome==3.20.0
+python-dateutil==2.8.2
 pytz==2025.2
 setuptools==80.9.0
-six==1.17.0
+six==1.16.0
+snappy_manifolds==1.2.1
+spherogram==2.3
+SQLite3-0611==0.0.1
+SQLite4==0.1.1
 tzdata==2025.2
 Werkzeug==3.1.3
 zope.interface==7.2
