--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ decorator==5.2.1
 env==0.1.0
 et_xmlfile==2.0.0
 Flask==3.1.1
+gunicorn==25.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 knot==0.4.0
@@ -29,3 +30,4 @@ SQLite4==0.1.1
 tzdata==2025.2
 Werkzeug==3.1.3
 zope.interface==7.2
+
