--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ MarkupSafe==3.0.2
 networkx==3.5
 numpy==2.2.6
 openpyxl==3.1.5
+xlsxwriter==3.2.0
 pandas==2.3.0
 pillow==10.2.0
 pycryptodome==3.20.0
